history wrapping fixed

--- a/assets/style.css
+++ b/assets/style.css
@@ -26,7 +26,7 @@ h2 {
 
 #nav {
     background-color: var(--dark-color);
-    /* height: 100vh; */
+    width: 175px;
 }
 
 #search, #genre, #searchButton {
@@ -165,6 +165,7 @@ section {
         line-height: 5px;
     }
     #nav {
+        width: 100%;
         height: auto;
     }
     #search, #genre, #searchButton {
